# rainy-city-radio

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  index.html  lore.md
scripts/: cron_bake.sh  rcr-radio.service
src/rcr/: __init__.py  audio_format.py  main.py  nim.py  streamer.py
src/rcr/jennifer/: commercials.py  feeder.py  intros.py  player.py  scheduler.py  spot_player.py  spots.py  voicer.py  voicer_supertonic.py
src/rcr/music/: analyze.py  feeder.py  ingest.py  selector.py  tracks.py
src/rcr/tools/: bake_commercials.py  download_beds.py  download_cc.py  fake_commercials_for_testing.py  generate_commercial_texts.py  generate_intros.py  generate_spots.py  ingest_track.py  ingest_watch.py  produce_commercials.py  render_bg.py  smoke_stream.py
tests/: test_generate_commercial_texts.py  test_intros.py  test_jennifer_scheduler.py  test_produce_commercials.py  test_selector.py  test_streamer_backoff.py  test_track_change_bridge.py  test_voicer.py
