[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rainy-city-radio"
version = "0.0.1"
description = "24/7 internet radio station — DJ Jennifer on 99X (99.7FM)"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0",
]

[project.optional-dependencies]
# M2+ — heavy deps held out of the base install so M0/M1 stay light.
ingest = ["librosa>=0.10", "numpy>=1.24", "soundfile>=0.12"]
chat = ["pytchat>=0.5"]
api = ["httpx>=0.27"]
watch = ["watchdog>=4.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
rcr-render-bg = "rcr.tools.render_bg:main"
rcr-smoke-stream = "rcr.tools.smoke_stream:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
